vld_pluralsight_session_01/main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "5.54.1"
    }
  }
}
##################################################################################
#############################        PROVIDERS        ############################
##################################################################################

provider "aws" {
  region = "eu-north-1"

}

##################################################################################
# DATA
##################################################################################

data "aws_ssm_parameter" "vld_amzn2_linux" {
  name = "/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2"
}


##################################################################################
# RESOURCES
##################################################################################

# NETWORKING #
resource "aws_vpc" "vld_app" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_hostnames = true
}

resource "aws_internet_gateway" "vld_app" {
  vpc_id = aws_vpc.vld_app.id
}

resource "aws_subnet" "vld_app_public_subnet1" {
  cidr_block              = "10.0.1.0/24"
  vpc_id                  = aws_vpc.vld_app.id
  map_public_ip_on_launch = true
  availability_zone       = "eu-north-1a"
}

# ROUTING #
resource "aws_route_table" "vld_app_route_table" {
  vpc_id = aws_vpc.vld_app.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.vld_app.id
  }
}

resource "aws_route_table_association" "vld_app_public_subnet1_route_table_association" {
  subnet_id      = aws_subnet.vld_app_public_subnet1.id
  route_table_id = aws_route_table.vld_app_route_table.id
}


# SECURITY GROUPS #
# Nginx security group
resource "aws_security_group" "nginx-sg" {
  name   = "nginx_sg"
  vpc_id = aws_vpc.vld_app.id

  # HTTP access from anywhere
  ingress {
    from_port = 80
    to_port   = 80
    protocol  = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # outbound internet access
  egress {
    from_port = 0
    to_port   = 0
    protocol  = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
# INSTANCES #
resource "aws_instance" "nginx1" {
  ami           = data.aws_ssm_parameter.vld_amzn2_linux.value
  instance_type = "t3.micro"
  subnet_id     = aws_subnet.vld_app_public_subnet1.id
  vpc_security_group_ids = [aws_security_group.nginx-sg.id]
  user_data     = <<EOF
    #! /bin/bash
    sudo amazon-linux-extras install -y nginx1
    sudo service nginx start
    sudo rm /usr/share/nginx/html/index.html
    echo '<html><head><title>Taco Team Server</title></head><body style=\"background-color:#1F778D\"><p style=\"text-align: center;\"><span style=\"color:#FFFFFF;\"><span style=\"font-size:28px;\">You did it! Have a &#127790;</span></span></p></body></html>' | sudo tee /usr/share/nginx/html/index.html
    EOF
}
